2008-09-08  Armin Burgmeier  <armin@0x539.de>

	* inc/client_buffer.hpp: Added a connect(const net6::address&)
	overload.

2008-09-08  Armin Burgmeier  <armin@0x539.de>

	* src/zeroconf_avahi.cpp: Set scope ID of discovered IPv6 services,
	for link-local IPv6 to work.

2008-06-22  Armin Burgmeier  <armin@0x539.de>

	* src/zeroconf_howl.cpp: Don't throw exceptions in C callbacks.
	Instead, print the error to std::cerr as the avahi implementation
	does.

2007-12-27  Philipp Kern <phil@0x539.de>

	* src/zeroconf_avahi.cpp: compilation fix for non-IPv6 builds

2007-12-27  Philipp Kern <phil@0x539.de>

	* NEWS: document changes

2007-12-27  Philipp Kern <phil@0x539.de>

	* configure.ac: bump version to 0.4.5

2007-12-27  Philipp Kern <phil@0x539.de>

	* src/Makefile.am: bump SONAME versin to 1:0:0 due to the new
	  discover6_event().

2007-12-01  Philipp Kern <phil@0x539.de>

	* New Italian translation, thanks to Sergio Zanchetta.
	* Translation import from Rosetta.

2007-07-22  Philipp Kern <phil@0x539.de>

	* New Swedish translation by Daniel Nylander [fixes #283]

2007-07-14  Philipp Kern <phil@0x539.de>

	* src/delete_operation.cpp:
	* src/insert_operation.cpp:
	* src/jupiter_algorithm.cpp:
	* src/jupiter_client.cpp:
	* src/jupiter_server.cpp:
	* src/jupiter_undo.cpp:
	* src/no_operation.cpp:
	* src/operation.cpp:
	* src/record.cpp:
	* src/split_operation.cpp: purged some dead code

2007-07-09  Armin Burgmeier  <armin@0x539.de>

	* src/zeroconf.cpp:
	* src/zeroconf_avahi.cpp:
	* inc/zeroconf_avahi.hpp:
	* inc/zeroconf_howl.hpp:
	* inc/zeroconf.hpp: Implement IPv6 discovery for avahi, added
	discover6_event() to zeroconf interface, added virtual destructor.
	This is an ABI break.

2007-06-14  Armin Burgmeier  <armin@0x539.de>

	* contrib/obby_web/obby.php: Fix parsing of escaped strings.

2007-04-15  Armin Burgmeier  <armin@0x539.de>

	* src/zeroconf_avahi.cpp: Don't prefix error message in throw() when
	discovering failed. The error handler may still do this.
